--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -21,24 +21,24 @@
     }
   },
   "dependencies": {
-    "nuxt": "2.12.2",
     "@nuxt/typescript-runtime": "0.4.8",
-    "@nuxtjs/axios": "5.11.0"
+    "@nuxtjs/axios": "5.11.0",
+    "nuxt": "2.12.2"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "1.0.1",
-    "@nuxtjs/tailwindcss": "2.0.0",
     "@nuxtjs/eslint-config-typescript": "2.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
+    "@nuxtjs/stylelint-module": "4.0.0",
+    "@nuxtjs/tailwindcss": "2.0.0",
     "babel-eslint": "10.1.0",
     "eslint": "7.1.0",
-    "eslint-plugin-nuxt": "1.0.0",
     "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-nuxt": "1.0.0",
     "eslint-plugin-prettier": "3.1.3",
-    "prettier": "2.0.5",
     "husky": "4.2.5",
     "lint-staged": "10.2.9",
-    "@nuxtjs/stylelint-module": "4.0.0",
+    "prettier": "2.0.5",
     "stylelint": "13.6.0"
   }
 }
