--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,12 +23,14 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "0.4.8",
     "@nuxtjs/axios": "5.11.0",
-    "nuxt": "2.12.2"
+    "nuxt": "2.12.2",
+    "twix": "^1.3.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "1.0.1",
     "@nuxtjs/eslint-config-typescript": "2.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "2.0.0",
     "babel-eslint": "10.1.0",
