--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -24,6 +24,7 @@
     "@nuxt/typescript-runtime": "0.4.8",
     "@nuxtjs/axios": "5.11.0",
     "nuxt": "2.12.2",
+    "nuxt-property-decorator": "^2.7.2",
     "twix": "1.3.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "2.0.0",
+    "@types/twix": "^0.6.38",
     "babel-eslint": "10.1.0",
     "eslint": "7.1.0",
     "eslint-config-prettier": "6.11.0",
