--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -28,6 +28,7 @@
     "twix": "1.3.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.13.3",
     "@nuxt/typescript-build": "2.0.0",
     "@nuxtjs/eslint-config-typescript": "2.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
