--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "1.0.0",
     "@nuxtjs/axios": "5.11.0",
+    "@nuxtjs/proxy": "^2.0.0",
     "nuxt": "2.13.3",
     "nuxt-property-decorator": "2.7.2",
     "twix": "1.3.0"
