--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -29,6 +29,7 @@
     "twix": "1.3.0"
   },
   "devDependencies": {
+    "@babel/runtime-corejs3": "^7.10.4",
     "@nuxt/types": "2.13.3",
     "@nuxt/typescript-build": "2.0.0",
     "@nuxtjs/eslint-config-typescript": "2.0.0",
@@ -38,6 +39,7 @@
     "@nuxtjs/tailwindcss": "2.0.0",
     "@types/twix": "0.6.38",
     "babel-eslint": "10.1.0",
+    "core-js": "3",
     "eslint": "7.4.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-nuxt": "1.0.0",
