--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -26,7 +26,8 @@
     "@nuxtjs/proxy": "2.0.0",
     "nuxt": "2.13.3",
     "nuxt-property-decorator": "2.7.2",
-    "twix": "1.3.0"
+    "twix": "1.3.0",
+    "vue-markdown-konishi": "^0.2.10"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "7.10.4",
