nuxt/typescript: Add Custom Type For "vue-markdown-konishi"

--- a/nuxt/tsconfig.json
+++ b/nuxt/tsconfig.json
@@ -27,6 +27,10 @@
       "@types/node",
       "@nuxt/types",
       "@nuxtjs/moment"
+    ],
+    "typeRoots": [
+      "types",
+      "node_modules/@types"
     ]
   },
   "exclude": [
