--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -28,6 +28,7 @@
     "nuxt": "2.13.3",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-property-decorator": "2.7.2",
+    "slugify": "^1.4.4",
     "twix": "1.3.0",
     "vue-markdown-konishi": "^0.2.10"
   },
