--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -25,12 +25,16 @@
     "@nuxt/typescript-runtime": "1.0.0",
     "@nuxtjs/axios": "5.12.0",
     "@nuxtjs/proxy": "2.0.0",
+    "aws-sdk": "2.710.0",
+    "lodash.get": "4.4.2",
+    "lodash.mergewith": "4.6.2",
     "nuxt": "2.13.3",
     "nuxt-fontawesome": "0.4.0",
     "nuxt-property-decorator": "2.7.2",
     "slugify": "1.4.4",
     "twix": "1.3.0",
-    "vue-markdown-konishi": "0.2.10"
+    "vue-markdown-konishi": "0.2.10",
+    "vue-plyr": "^6.0.4"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "7.10.4",
@@ -41,6 +45,9 @@
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "2.0.0",
+    "@types/lodash.get": "4.4.6",
+    "@types/lodash.mergewith": "4.6.6",
+    "@types/node": "14.0.18",
     "@types/twix": "0.6.38",
     "babel-eslint": "10.1.0",
     "core-js": "3.6.5",
