--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -9,10 +9,12 @@
     "build": "nuxt-ts build",
     "generate": "nuxt-ts generate",
     "start": "nuxt-ts start",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint": "yarn lint:js && yarn lint:style"
   },
   "lint-staged": {
-    "*.{js,vue}": "yarn lint",
+    "*.{js,vue}": "eslint",
     "*.{css,vue}": "stylelint"
   },
   "husky": {
@@ -58,6 +60,8 @@
     "husky": "4.2.5",
     "lint-staged": "10.3.0",
     "prettier": "2.1.1",
-    "stylelint": "13.7.0"
+    "stylelint": "13.7.0",
+    "stylelint-config-prettier": "8.0.2",
+    "stylelint-config-standard": "20.0.0"
   }
 }
