fix(ci): zip dist folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,13 @@ jobs:
             --load \
             .
           docker container create --name extract stage_build
-          docker container cp extract:/srv/app/ .
+          docker container cp extract:/srv/app/ ./dist/
           docker container rm -f extract
 
       - name: Zip
         uses: montudor/action-zip@v0.1.0
         with:
-          args: zip -qq -r ./creal.zip ./
+          args: zip -qq -r ./creal.zip ./dist/
 
       - name: GitHub Release Asset
         uses: softprops/action-gh-release@v1
