--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -5,24 +5,39 @@ on:
     - cron:  '0 0 * * 1' # Every Monday at 00:00 AM UTC on the default branch
 
 jobs:
-  scheduled-release:
+  analyze-tags:
     runs-on: ubuntu-latest
+    outputs:
+      previous-tag: ${{ steps.previoustag.outputs.tag }}
+      timestamp-diff: ${{ steps.diff.outputs.timestamp-diff }}
     steps:
       - uses: actions/checkout@v2.3.3
         with:
           fetch-depth: 0
-          ref: ${{ github.head_ref }}
-          token: ${{ secrets.GH_TOKEN }}
-      - name: Get Previous tag
+      - name: Get previous tag
         id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@0.2.0"
+        uses: "WyriHaximus/github-action-get-previous-tag@1.0.0"
+      - name: Get seconds from previous tag to now
+        id: diff
+        shell: bash
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          TIMESTAMP_TAG: ${{ steps.previoustag.outputs.timestamp }}
+        run: |
+          echo "::set-output name=timestamp-diff::$(expr $(printf '%(%s)T') - $TIMESTAMP_TAG)"
+
+  schedule-release:
+    runs-on: ubuntu-latest
+    needs: analyze-tags
+    if: needs.analyze-tags.outputs.timestamp-diff > 604800 # 604800 equal one week.
+    steps:
+      - uses: actions/checkout@v2.3.3
+        with:
+          token: ${{ secrets.GH_TOKEN }}
       - name: Get next minor version
         id: semvers
         uses: "WyriHaximus/github-action-next-semvers@v1.0"
         with:
-          version: ${{ steps.previoustag.outputs.tag }}
+          version: ${{ needs.analyze-tags.outputs.previous-tag }}
       - name: manifest Version
         uses: deef0000dragon1/json-edit-action/@v1
         env:
