--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,6 @@ updates:
   assignees:
     - dargmuesli
   commit-message:
-    prefix: fix
+    prefix: chore
     prefix-development: chore
     include: scope
