--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -29,7 +29,7 @@
     "@nuxtjs/axios": "5.12.2",
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/proxy": "2.0.1",
-    "@nuxtjs/sitemap": "^2.4.0",
+    "@nuxtjs/sitemap": "2.4.0",
     "aws-sdk": "2.778.0",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
