feat(ops): add healthcheck

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -35,6 +35,7 @@
     "lodash.mergewith": "4.6.2",
     "nuxt": "2.14.7",
     "nuxt-fontawesome": "0.4.0",
+    "nuxt-healthcheck": "1.0.1",
     "nuxt-property-decorator": "2.8.8",
     "pretty-bytes": "5.4.1",
     "slugify": "1.4.5",
