--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -24,20 +24,24 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/vue-fontawesome": "2.0.0",
     "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/axios": "5.12.2",
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/proxy": "2.0.1",
+    "@nuxtjs/robots": "2.4.2",
     "@nuxtjs/sitemap": "2.4.0",
     "aws-sdk": "2.784.0",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "nuxt": "2.14.7",
-    "nuxt-fontawesome": "0.4.0",
     "nuxt-healthcheck": "1.0.1",
+    "nuxt-helmet": "2.0.0",
     "nuxt-property-decorator": "2.8.8",
     "pretty-bytes": "5.4.1",
+    "shrink-ray-current": "4.1.2",
     "slugify": "1.4.6",
     "twix": "1.3.0",
     "vue-markdown-konishi": "0.2.10",
@@ -51,6 +55,7 @@
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config-typescript": "4.0.0",
     "@nuxtjs/eslint-module": "3.0.0",
+    "@nuxtjs/fontawesome": "1.1.2",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "3.2.0",
     "@types/lodash.get": "4.4.6",
