--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -34,6 +34,7 @@
     "@nuxtjs/robots": "2.4.2",
     "@nuxtjs/sitemap": "2.4.0",
     "aws-sdk": "2.787.0",
+    "consola": "2.15.0",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "nuxt": "2.14.7",
