--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.32",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/vue-fontawesome": "2.0.0",
     "@nuxt/typescript-runtime": "2.0.0",
