feat: add dj keyword
Closes #61.

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.18.2",
   "scheduleVersion": "0.4.3",
-  "description": "cReal's website.",
+  "description": "DJ cReal's website.",
   "author": "Jonas Thelemann",
   "scripts": {
     "dev": "nuxt-ts",
