--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -58,6 +58,7 @@
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
     "@nuxtjs/fontawesome": "1.1.2",
+    "@nuxtjs/html-validator": "0.1.5",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "3.4.2",
     "@types/lodash.get": "4.4.6",
