--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -6,9 +6,9 @@
   "description": "DJ cReal's website.",
   "author": "Jonas Thelemann",
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style"
@@ -28,7 +28,6 @@
     "@fortawesome/free-brands-svg-icons": "5.15.2",
     "@fortawesome/free-solid-svg-icons": "5.15.2",
     "@fortawesome/vue-fontawesome": "2.0.2",
-    "@nuxt/typescript-runtime": "2.1.0",
     "@nuxtjs/axios": "5.13.1",
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/proxy": "2.1.0",
