--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -66,12 +66,17 @@
     "@types/twix": "0.6.38",
     "babel-eslint": "10.1.0",
     "core-js": "3.10.0",
+    "css-loader": "5.0.0",
     "eslint": "7.23.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
+    "postcss": "8.1.10",
+    "postcss-import": "13.0.0",
+    "postcss-loader": "4.1.0",
+    "postcss-url": "10.1.1",
     "prettier": "2.2.1",
     "stylelint": "13.12.0",
     "stylelint-config-prettier": "8.0.2",
