--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -71,6 +71,7 @@
     "prettier": "2.3.2",
     "stylelint": "13.13.1",
     "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-standard": "22.0.0"
+    "stylelint-config-standard": "22.0.0",
+    "stylelint-no-unsupported-browser-features": "5.0.1"
   }
 }
