feat(player): add share button
Resolves #54.
Resolves #22.

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -33,6 +33,7 @@
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "nuxt": "2.15.7",
+    "nuxt-clipboard2": "0.2.1",
     "nuxt-healthcheck": "1.0.1",
     "nuxt-helmet": "2.0.1",
     "nuxt-property-decorator": "2.9.1",
@@ -74,5 +75,8 @@
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "22.0.0",
     "stylelint-no-unsupported-browser-features": "5.0.1"
+  },
+  "resolutions": {
+    "vue-clipboard2": "0.3.1"
   }
 }
