feat: add legal notice and footer

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,11 +23,14 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.2",
     "@nuxtjs/axios": "5.13.6",
+    "@nuxtjs/composition-api": "0.29.2",
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/proxy": "2.1.0",
     "@nuxtjs/robots": "2.5.0",
     "@nuxtjs/sitemap": "2.4.0",
+    "@tailwindcss/forms": "0.3.4",
     "@tailwindcss/line-clamp": "0.2.2",
+    "@tailwindcss/typography": "0.4.1",
     "aws-sdk": "2.1002.0",
     "consola": "2.15.3",
     "lodash.get": "4.4.2",
