--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -9,7 +9,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style"
   },
@@ -22,8 +22,10 @@
     "@fortawesome/free-brands-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.2",
+    "@nuxt/types": "2.15.8",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/composition-api": "0.29.3",
+    "@nuxtjs/i18n": "7.0.3",
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/proxy": "2.1.0",
     "@nuxtjs/robots": "2.5.0",
@@ -36,21 +38,22 @@
     "core-js": "3.18.3",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
+    "marked": "3.0.7",
     "nuxt": "2.15.8",
     "nuxt-clipboard2": "0.2.1",
     "nuxt-healthcheck": "1.0.1",
     "nuxt-helmet": "2.0.1",
-    "nuxt-property-decorator": "2.9.1",
     "pretty-bytes": "5.6.0",
     "shrink-ray-current": "4.1.3",
     "slugify": "1.6.1",
     "twix": "1.3.0",
-    "vue-markdown-konishi": "0.2.10",
-    "vue-plyr": "6.0.4"
+    "vue-plyr": "6.0.4",
+    "vuelidate": "0.7.6",
+    "vuex-module-decorators": "1.0.1"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "7.15.4",
-    "@nuxt/types": "2.15.8",
+    "@intlify/eslint-plugin-vue-i18n": "0.15.0",
     "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/eslint-config-typescript": "6.0.1",
     "@nuxtjs/eslint-module": "3.0.2",
@@ -60,14 +63,17 @@
     "@nuxtjs/tailwindcss": "4.0.3",
     "@types/lodash.get": "4.4.6",
     "@types/lodash.mergewith": "4.6.6",
-    "@types/node": "14.17.22",
+    "@types/marked": "3.0.1",
+    "@types/node": "16.10.5",
     "@types/twix": "0.6.39",
+    "@types/vuelidate": "0.7.15",
     "babel-eslint": "10.1.0",
     "css-loader": "5.2.7",
-    "eslint": "8.0.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-yml": "0.10.1",
     "lint-staged": "11.2.3",
     "postcss": "8.2.10",
     "postcss-import": "14.0.2",
