--- a/nuxt/tsconfig.json
+++ b/nuxt/tsconfig.json
@@ -29,8 +29,9 @@
       "@nuxtjs/axios",
       "@nuxtjs/i18n",
       "@nuxtjs/moment",
+      "twix",
+      "vue-apollo/types",
       "vue-clipboard2",
-      "twix"
     ],
     "typeRoots": [
       "types",
