--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.2",
     "@nuxt/types": "2.15.8",
+    "@nuxtjs/apollo": "4.0.1-rc.5",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/composition-api": "0.29.3",
     "@nuxtjs/i18n": "7.0.3",
@@ -36,6 +37,7 @@
     "aws-sdk": "2.1007.0",
     "consola": "2.15.3",
     "core-js": "3.18.3",
+    "jsonwebtoken": "8.5.1",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "marked": "3.0.7",
@@ -61,6 +63,7 @@
     "@nuxtjs/html-validator": "0.6.0",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "4.0.3",
+    "@types/jsonwebtoken": "8.5.5",
     "@types/lodash.get": "4.4.6",
     "@types/lodash.mergewith": "4.6.6",
     "@types/marked": "3.0.1",
@@ -74,6 +77,7 @@
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-yml": "0.10.1",
+    "graphql-tag": "2.12.5",
     "lint-staged": "11.2.3",
     "postcss": "8.2.10",
     "postcss-import": "14.0.2",
