--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.2",
+    "@http-util/status-i18n": "0.3.0",
     "@nuxt/types": "2.15.8",
     "@nuxtjs/apollo": "4.0.1-rc.5",
     "@nuxtjs/axios": "5.13.6",
