feat(suggestions): add sweet alerts

--- a/nuxt/tsconfig.json
+++ b/nuxt/tsconfig.json
@@ -32,6 +32,7 @@
       "twix",
       "vue-apollo/types",
       "vue-clipboard2",
+      "vue-sweetalert2",
     ],
     "typeRoots": [
       "types",
