--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -51,6 +51,7 @@
     "slugify": "1.6.1",
     "twix": "1.3.0",
     "vue-plyr": "6.0.4",
+    "vue-sweetalert2": "5.0.2",
     "vuelidate": "0.7.6",
     "vuex-module-decorators": "1.0.1"
   },
