--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -14,7 +14,7 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint",
+    "*.{js,ts,vue}": "eslint",
     "*.{css,vue}": "stylelint"
   },
   "dependencies": {
@@ -50,7 +50,7 @@
     "shrink-ray-current": "4.1.3",
     "slugify": "1.6.1",
     "twix": "1.3.0",
-    "vue-plyr": "6.0.4",
+    "vue-plyr": "7.0.0",
     "vue-sweetalert2": "5.0.2",
     "vuelidate": "0.7.6",
     "vuex-module-decorators": "1.0.1"
@@ -64,7 +64,7 @@
     "@nuxtjs/fontawesome": "1.1.2",
     "@nuxtjs/html-validator": "0.6.0",
     "@nuxtjs/stylelint-module": "4.0.0",
-    "@nuxtjs/tailwindcss": "4.0.3",
+    "@nuxtjs/tailwindcss": "4.2.1",
     "@types/jsonwebtoken": "8.5.5",
     "@types/lodash.get": "4.4.6",
     "@types/lodash.mergewith": "4.6.6",
@@ -73,7 +73,6 @@
     "@types/twix": "0.6.39",
     "@types/vuelidate": "0.7.15",
     "babel-eslint": "10.1.0",
-    "css-loader": "5.2.7",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-nuxt": "3.0.0",
@@ -81,13 +80,12 @@
     "eslint-plugin-yml": "0.10.1",
     "graphql-tag": "2.12.5",
     "lint-staged": "11.2.6",
-    "postcss": "8.2.10",
-    "postcss-import": "14.0.2",
-    "postcss-loader": "4.3.0",
-    "postcss-url": "10.1.3",
+    "postcss": "8.3.11",
+    "postcss-html": "1.1.1",
     "prettier": "2.4.1",
     "stylelint": "14.0.1",
     "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-recommended-vue": "1.0.0",
     "stylelint-config-standard": "23.0.0",
     "stylelint-no-unsupported-browser-features": "5.0.2"
   },
