chore(deps): pin postcss-preset-env to v7.0.1

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -90,6 +90,7 @@
     "stylelint-no-unsupported-browser-features": "5.0.2"
   },
   "resolutions": {
+    "postcss-preset-env": "7.0.1",
     "vue-clipboard2": "0.3.3"
   }
 }
