feat(nuxt): use bridge

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -6,9 +6,9 @@
   "description": "DJ cReal's website.",
   "author": "Jonas Thelemann",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi start",
     "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style"
@@ -26,7 +26,6 @@
     "@nuxt/types": "2.15.8",
     "@nuxtjs/apollo": "4.0.1-rc.5",
     "@nuxtjs/axios": "5.13.6",
-    "@nuxtjs/composition-api": "0.31.0",
     "@nuxtjs/i18n": "7.2.0",
     "@nuxtjs/moment": "1.6.1",
     "@nuxtjs/proxy": "2.1.0",
@@ -42,7 +41,7 @@
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "marked": "4.0.6",
-    "nuxt": "2.15.8",
+    "nuxt-edge": "latest",
     "nuxt-clipboard2": "0.2.1",
     "nuxt-healthcheck": "1.0.1",
     "nuxt-helmet": "2.0.1",
@@ -58,7 +57,8 @@
   "devDependencies": {
     "@babel/runtime-corejs3": "7.16.3",
     "@intlify/eslint-plugin-vue-i18n": "1.2.0",
-    "@nuxt/typescript-build": "2.1.0",
+    "@nuxt/babel-preset-app": "2.15.8",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxtjs/eslint-config-typescript": "8.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
     "@nuxtjs/fontawesome": "1.1.2",
