--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -41,8 +41,8 @@
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "marked": "4.0.6",
-    "nuxt-edge": "latest",
     "nuxt-clipboard2": "0.2.1",
+    "nuxt-edge": "latest",
     "nuxt-healthcheck": "1.0.1",
     "nuxt-helmet": "2.0.1",
     "pretty-bytes": "5.6.0",
@@ -87,7 +87,8 @@
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-recommended-vue": "1.1.0",
     "stylelint-config-standard": "24.0.0",
-    "stylelint-no-unsupported-browser-features": "5.0.2"
+    "stylelint-no-unsupported-browser-features": "5.0.2",
+    "typescript": "4.5.2"
   },
   "resolutions": {
     "postcss-preset-env": "7.0.1",
