--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,12 +23,12 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.6",
     "@http-util/status-i18n": "0.3.0",
+    "@nuxt/http": "0.6.4",
     "@nuxt/types": "2.15.8",
     "@nuxtjs/apollo": "4.0.1-rc.5",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/i18n": "7.2.0",
     "@nuxtjs/moment": "1.6.1",
-    "@nuxtjs/proxy": "2.1.0",
     "@nuxtjs/robots": "2.5.0",
     "@nuxtjs/sitemap": "2.4.0",
     "@tailwindcss/forms": "0.3.4",
