--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -50,10 +50,11 @@
     "twix": "1.3.0",
     "vue-plyr": "7.0.0",
     "vue-sweetalert2": "5.0.2",
-    "vuelidate": "0.7.6",
+    "vuelidate": "0.7.7",
     "vuex-module-decorators": "2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.16.0",
     "@babel/runtime-corejs3": "7.16.3",
     "@intlify/eslint-plugin-vue-i18n": "1.2.0",
     "@nuxt/babel-preset-app": "2.15.8",
@@ -71,14 +72,18 @@
     "@types/node": "16.11.12",
     "@types/twix": "0.6.39",
     "@types/vuelidate": "0.7.15",
+    "apollo-cache-inmemory": "1.6.6",
+    "autoprefixer": "10.4.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.32.0",
+    "chalk": "4.1.2",
+    "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-nuxt": "3.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-yml": "0.12.0",
     "graphql-tag": "2.12.6",
     "lint-staged": "12.1.2",
+    "moment": "2.29.1",
     "postcss": "8.4.4",
     "postcss-html": "1.3.0",
     "prettier": "2.5.1",
@@ -87,7 +92,10 @@
     "stylelint-config-recommended-vue": "1.1.0",
     "stylelint-config-standard": "24.0.0",
     "stylelint-no-unsupported-browser-features": "5.0.2",
-    "typescript": "4.5.2"
+    "tailwindcss": "2.2.19",
+    "typescript": "4.5.2",
+    "vue": "2.6.14",
+    "webpack": "4.46.0"
   },
   "resolutions": {
     "postcss-preset-env": "7.0.1",
