--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   },
   "private": true,
   "scripts": {
-    "postinstall": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks"
+    "postinstall": "if [[ -d '.git' && -d '.husky' ]]; then husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks; fi"
   }
 }
