--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -86,12 +86,13 @@
     "postcss": "8.4.6",
     "postcss-html": "1.3.0",
     "prettier": "2.5.1",
+    "prettier-plugin-tailwindcss": "0.1.7",
     "stylelint": "14.5.0",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-recommended-vue": "1.2.0",
     "stylelint-config-standard": "25.0.0",
     "stylelint-no-unsupported-browser-features": "5.0.2",
-    "tailwindcss": "3.0.20",
+    "tailwindcss": "3.0.21",
     "typescript": "4.5.5",
     "vue": "2.6.14",
     "webpack": "4.46.0"
