--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -18,10 +18,6 @@
     "*.{css,vue}": "stylelint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.1.1",
-    "@fortawesome/free-brands-svg-icons": "6.1.1",
-    "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@fortawesome/vue-fontawesome": "2.0.6",
     "@http-util/status-i18n": "0.3.0",
     "@nuxt/http": "0.6.4",
     "@nuxt/types": "2.15.8",
@@ -35,6 +31,7 @@
     "@tailwindcss/line-clamp": "0.3.1",
     "@tailwindcss/typography": "0.5.2",
     "aws-sdk": "2.1114.0",
+    "compression-with-brotli": "1.7.5",
     "consola": "2.15.3",
     "core-js": "3.21.1",
     "jsonwebtoken": "8.5.1",
@@ -45,7 +42,6 @@
     "nuxt-edge": "latest",
     "nuxt-helmet": "3.0.0",
     "pretty-bytes": "6.0.0",
-    "shrink-ray-current": "4.1.3",
     "slugify": "1.6.5",
     "twix": "1.3.0",
     "vue-plyr": "7.0.0",
@@ -61,7 +57,6 @@
     "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxtjs/eslint-config-typescript": "9.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
-    "@nuxtjs/fontawesome": "1.1.2",
     "@nuxtjs/html-validator": "0.6.0",
     "@nuxtjs/stylelint-module": "4.1.0",
     "@types/jsonwebtoken": "8.5.8",
