chore(deps): switch to @nuxt/types-edge

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,7 +23,7 @@
     "@aws-sdk/s3-request-presigner": "3.86.0",
     "@http-util/status-i18n": "0.6.2",
     "@nuxt/http": "0.6.4",
-    "@nuxt/types": "2.15.8",
+    "@nuxt/types-edge": "2.16.0-27358576.777a4b7f",
     "@nuxtjs/apollo": "4.0.1-rc.5",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/i18n": "7.2.2",
