--- a/nuxt/tsconfig.json
+++ b/nuxt/tsconfig.json
@@ -29,7 +29,7 @@
     },
     "types": [
       "@nuxt/http",
-      "@nuxt/types",
+      "@nuxt/types-edge",
       "@nuxtjs/axios",
       "@nuxtjs/i18n",
       "@nuxtjs/moment",
