--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -41,7 +41,7 @@
     "lodash.mergewith": "4.6.2",
     "marked": "4.0.17",
     "nuxt-clipboard2": "0.2.1",
-    "nuxt-edge": "latest",
+    "nuxt-edge": "2.16.0-27600439.123206cb",
     "nuxt-helmet": "3.0.0",
     "pretty-bytes": "6.0.0",
     "slugify": "1.6.5",
