--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
+  "private": true,
+  "packageManager": "pnpm@7.17.0",
+  "scripts": {
+    "postinstall": "if [ -d '.git' ] && [ -d '.husky' ]; then husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks; fi"
+  },
   "devDependencies": {
     "@commitlint/cli": "17.3.0",
     "@commitlint/config-conventional": "17.3.0",
     "husky": "8.0.2",
     "shx": "0.3.4"
-  },
-  "private": true,
-  "scripts": {
-    "postinstall": "if [ -d '.git' ] && [ -d '.husky' ]; then husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks; fi"
   }
 }
