--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -7,8 +7,8 @@
   "author": "Jonas Thelemann",
   "packageManager": "pnpm@7.17.0",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxi dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider nuxi build",
     "start": "node .output/server/index.mjs",
     "lint": "pnpm lint:js && pnpm lint:style",
     "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
@@ -51,14 +51,14 @@
     "vue-plyr": "7.0.0",
     "vue-sweetalert2": "5.0.5",
     "vuelidate": "0.7.7",
-    "vuex-module-decorators": "2.0.0"
+    "vuex-module-decorators": "1.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.20.2",
     "@babel/runtime-corejs3": "7.20.1",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@nuxt/babel-preset-app": "2.15.8",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@3.0.0-27778503.de9e5c2",
     "@nuxtjs/eslint-config-typescript": "11.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
     "@nuxtjs/html-validator": "1.1.1",
@@ -70,14 +70,17 @@
     "@types/node": "18.11.9",
     "@types/twix": "0.6.39",
     "@types/vuelidate": "0.7.15",
+    "@vue/cli-shared-utils": "4.5.19",
     "apollo-cache-inmemory": "1.6.6",
     "autoprefixer": "10.4.13",
     "babel-eslint": "10.1.0",
+    "buffer": "6.0.3",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-yml": "1.2.0",
+    "graphql": "15.8.0",
     "graphql-tag": "2.12.6",
     "lint-staged": "13.0.4",
     "moment": "2.29.4",
@@ -93,6 +96,7 @@
     "tailwindcss": "3.2.4",
     "typescript": "4.9.3",
     "vue": "2.7.14",
+    "vuex": "3.6.2",
     "webpack": "4.46.0"
   },
   "resolutions": {
