--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -13,7 +13,16 @@
     "lint": "pnpm lint:js && pnpm lint:style",
     "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lint:staged": "pnpm lint-staged"
+    "lint:staged": "pnpm lint-staged",
+    "cypress:open": "cypress open",
+    "cypress:test": "cypress run --env type=actual",
+    "test:integration:dev": "cross-env WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm nuxi dev' 'http://localhost:3000' 'pnpm cypress:test'",
+    "test:integration:prod": "cross-env WAIT_ON_TIMEOUT=10000 NODE_ENV=production start-server-and-test 'pnpm start' 'http://localhost:3000' 'pnpm cypress:test'",
+    "test:integration:docker:build": "docker build -t test-integration_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-integration_base ../",
+    "test:integration:docker:run": "docker run --rm --entrypoint docker-entrypoint.sh -v \"$PWD:/srv/app\" test-integration_base",
+    "test:integration:docker:br": "pnpm test:integration:docker:build && pnpm test:integration:docker:run",
+    "test:integration:docker:dev": "pnpm test:integration:docker:br pnpm test:integration:dev",
+    "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod"
   },
   "lint-staged": {
     "*.{js,ts,vue}": "eslint",
@@ -23,6 +32,7 @@
     "@aws-sdk/client-s3": "3.216.0",
     "@aws-sdk/credential-providers": "3.216.0",
     "@aws-sdk/s3-request-presigner": "3.216.0",
+    "@funken-studio/sitemap-nuxt-3": "4.0.4",
     "@http-util/status-i18n": "0.6.2",
     "@nuxt/http": "0.6.4",
     "@nuxt/types-edge": "2.16.0-27720022.54e852f",
@@ -30,8 +40,7 @@
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/i18n": "7.3.0",
     "@nuxtjs/moment": "1.6.1",
-    "@nuxtjs/robots": "2.5.0",
-    "@nuxtjs/sitemap": "2.4.0",
+    "@nuxtjs/robots": "3.0.0",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.8",
@@ -42,6 +51,7 @@
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "marked": "4.2.3",
+    "node-fetch": "2.6.7",
     "nuxt-clipboard2": "0.2.1",
     "nuxt-edge": "2.16.0-27720022.54e852f",
     "nuxt-helmet": "3.0.0",
@@ -75,6 +85,9 @@
     "autoprefixer": "10.4.13",
     "babel-eslint": "10.1.0",
     "buffer": "6.0.3",
+    "cross-env": "7.0.3",
+    "cypress": "11.2.0",
+    "cypress-visual-regression": "1.7.0",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-nuxt": "4.0.0",
@@ -88,6 +101,7 @@
     "postcss-html": "1.5.0",
     "prettier": "2.8.0",
     "prettier-plugin-tailwindcss": "0.2.0",
+    "start-server-and-test": "1.14.0",
     "stylelint": "14.15.0",
     "stylelint-config-prettier": "9.0.4",
     "stylelint-config-recommended-vue": "1.4.0",
