feat: migrate to nuxt 3
BREAKING CHANGE: migration to Nuxt 3.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,24 +1,30 @@
+# Created by https://www.toptal.com/developers/gitignore/api/node
+# Edit at https://www.toptal.com/developers/gitignore?templates=node
+# UNUSED PROPERTIES REMOVED!
+
 # Dependency directories
-**/node_modules/
+nuxt/node_modules/
 
 # Nuxt.js build / generate output
 nuxt/.nuxt
 nuxt/.output
 
+# End of https://www.toptal.com/developers/gitignore/api/node
+
 # Git
-**/!.gitkeep
+nuxt/**/!.gitkeep
 
 # Environment variables
 **/.env
 
 # ESLint
-**/.eslintcache
+.eslintcache
 
 # Cypress
-**/cypress/results
-**/cypress/reports
-**/cypress/screenshots
-**/cypress/snapshots/actual
-**/cypress/snapshots/diff
-**/cypress/snapshots/result
-**/cypress/videos
+nuxt/cypress/results
+nuxt/cypress/reports
+nuxt/cypress/screenshots
+nuxt/cypress/snapshots/actual
+nuxt/cypress/snapshots/diff
+nuxt/cypress/snapshots/result
+nuxt/cypress/videos
