--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -5,115 +5,119 @@
   "scheduleVersion": "0.44.22",
   "description": "DJ cReal's website.",
   "author": "Jonas Thelemann",
+  "type": "module",
+  "engines": {
+    "node": "19"
+  },
   "packageManager": "pnpm@7.18.0",
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxi dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider nuxi build",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
     "start": "node .output/server/index.mjs",
-    "lint": "pnpm lint:js && pnpm lint:style",
-    "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
-    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lint:staged": "pnpm lint-staged",
     "cypress:open": "cypress open",
     "cypress:test": "cypress run --env type=actual",
-    "test:integration:dev": "cross-env WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm nuxi dev' 'http://localhost:3000' 'pnpm cypress:test'",
+    "test": "pnpm test:integration:dev",
+    "test:integration:dev": "cross-env WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm dev' 'http://localhost:3000' 'pnpm cypress:test'",
     "test:integration:prod": "cross-env WAIT_ON_TIMEOUT=10000 NODE_ENV=production start-server-and-test 'pnpm start' 'http://localhost:3000' 'pnpm cypress:test'",
     "test:integration:docker:build": "docker build -t test-integration_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-integration_base ../",
     "test:integration:docker:run": "docker run --rm --entrypoint docker-entrypoint.sh -v \"$PWD:/srv/app\" test-integration_base",
     "test:integration:docker:br": "pnpm test:integration:docker:build && pnpm test:integration:docker:run",
     "test:integration:docker:dev": "pnpm test:integration:docker:br pnpm test:integration:dev",
-    "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod"
+    "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod",
+    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
+    "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
+    "lint:ts": "pnpm nuxt typecheck",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
+    "lint:quiet": "pnpm lint:js --quiet && pnpm lint:style --quiet",
+    "lint:staged": "pnpm lint-staged",
+    "supportedBrowsers": "echo \"export default $(browserslist-useragent-regexp --allowHigherVersions);\" > supportedBrowsers.js",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config codegen.yml"
   },
-  "lint-staged": {
-    "*.{js,ts,vue}": "eslint",
-    "*.{css,vue}": "stylelint"
-  },
-  "dependencies": {
+  "devDependencies": {
     "@aws-sdk/client-s3": "3.223.0",
     "@aws-sdk/credential-providers": "3.223.0",
     "@aws-sdk/s3-request-presigner": "3.223.0",
+    "@babel/core": "7.20.5",
     "@funken-studio/sitemap-nuxt-3": "4.0.4",
+    "@graphql-codegen/cli": "2.15.0",
+    "@graphql-codegen/typescript": "2.8.3",
+    "@graphql-codegen/typescript-operations": "2.5.8",
+    "@graphql-codegen/typescript-urql-graphcache": "2.4.3",
+    "@graphql-codegen/typescript-vue-urql": "2.3.6",
+    "@graphql-codegen/urql-introspection": "2.2.1",
     "@http-util/status-i18n": "0.6.2",
-    "@nuxt/http": "0.6.4",
-    "@nuxt/types-edge": "2.16.0-27720022.54e852f",
-    "@nuxtjs/apollo": "4.0.1-rc.5",
-    "@nuxtjs/axios": "5.13.6",
-    "@nuxtjs/i18n": "7.3.0",
-    "@nuxtjs/moment": "1.6.1",
+    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
+    "@nuxtjs/color-mode": "3.2.0",
+    "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@nuxtjs/html-validator": "1.2.2",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.1-27775490.1ee240a",
     "@nuxtjs/robots": "3.0.0",
+    "@nuxtjs/sitemap": "2.4.0",
+    "@pinia/nuxt": "0.4.6",
+    "@rollup/plugin-graphql": "1.1.0",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.8",
-    "compression-with-brotli": "1.7.5",
-    "consola": "2.15.3",
-    "core-js": "3.26.1",
-    "jsonwebtoken": "8.5.1",
-    "lodash.get": "4.4.2",
-    "lodash.mergewith": "4.6.2",
-    "marked": "4.2.3",
-    "node-fetch": "2.6.7",
-    "nuxt-clipboard2": "0.2.1",
-    "nuxt-edge": "2.16.0-27720022.54e852f",
-    "nuxt-helmet": "3.0.0",
-    "pretty-bytes": "6.0.0",
-    "slugify": "1.6.5",
-    "twix": "1.3.0",
-    "vue-plyr": "7.0.0",
-    "vue-sweetalert2": "5.0.5",
-    "vuelidate": "0.7.7",
-    "vuex-module-decorators": "1.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "7.20.5",
-    "@babel/runtime-corejs3": "7.20.6",
-    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
-    "@nuxt/babel-preset-app": "2.15.8",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@3.0.0-27833237.ddd8ecc",
-    "@nuxtjs/eslint-config-typescript": "11.0.0",
-    "@nuxtjs/eslint-module": "3.1.0",
-    "@nuxtjs/html-validator": "1.2.1",
-    "@nuxtjs/stylelint-module": "4.1.0",
-    "@types/jsonwebtoken": "8.5.9",
-    "@types/lodash.get": "4.4.7",
-    "@types/lodash.mergewith": "4.6.7",
+    "@types/cookie": "0.5.1",
+    "@types/lodash-es": "4.17.6",
     "@types/marked": "4.0.7",
     "@types/node": "18.11.10",
     "@types/twix": "0.6.39",
-    "@types/vuelidate": "0.7.15",
-    "@vue/cli-shared-utils": "5.0.8",
-    "apollo-cache-inmemory": "1.6.6",
+    "@urql/core": "3.0.5",
+    "@urql/devtools": "2.0.3",
+    "@urql/exchange-graphcache": "5.0.5",
+    "@urql/vue": "1.0.2",
+    "@vuelidate/core": "2.0.0",
+    "@vuelidate/validators": "2.0.0",
     "autoprefixer": "10.4.13",
-    "babel-eslint": "10.1.0",
-    "buffer": "6.0.3",
+    "clipboard": "2.0.11",
+    "consola": "2.15.3",
+    "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "cypress": "11.2.0",
     "cypress-visual-regression": "1.7.0",
+    "dayjs": "2.0.0-alpha.4",
+    "defu": "6.1.1",
     "eslint": "8.29.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-yml": "1.2.0",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
+    "h3": "1.0.1",
+    "is-https": "4.0.0",
+    "jose": "4.11.1",
     "lint-staged": "13.1.0",
-    "moment": "2.29.4",
+    "lodash-es": "4.17.21",
+    "marked": "4.2.3",
+    "node-fetch": "3.3.0",
+    "nuxt": "3.0.0",
+    "pinia": "2.0.27",
     "postcss": "8.4.19",
     "postcss-html": "1.5.0",
     "prettier": "2.8.0",
     "prettier-plugin-tailwindcss": "0.2.0",
+    "pretty-bytes": "6.0.0",
+    "rollup": "2.79.1",
+    "slugify": "1.6.5",
     "start-server-and-test": "1.14.0",
     "stylelint": "14.16.0",
     "stylelint-config-prettier": "9.0.4",
     "stylelint-config-recommended-vue": "1.4.0",
     "stylelint-config-standard": "29.0.0",
     "stylelint-no-unsupported-browser-features": "6.0.1",
+    "sweetalert2": "11.6.15",
     "tailwindcss": "3.2.4",
+    "ts-node": "10.9.1",
     "typescript": "4.9.3",
-    "vue": "2.7.14",
-    "vuex": "3.6.2",
-    "webpack": "4.46.0"
+    "vue": "3.2.45",
+    "vue-plyr": "7.0.0"
   },
-  "resolutions": {
-    "vue-clipboard2": "0.3.3"
+  "lint-staged": {
+    "*.{js,ts,vue}": "eslint",
+    "*.{css,vue}": "stylelint"
   }
 }
