--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -105,7 +105,7 @@
     "prettier": "2.8.3",
     "prettier-plugin-tailwindcss": "0.2.2",
     "pretty-bytes": "6.0.0",
-    "rollup": "2.79.1",
+    "rollup": "3.11.0",
     "slugify": "1.6.5",
     "start-server-and-test": "1.15.3",
     "stylelint": "14.16.1",
@@ -125,6 +125,7 @@
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
+        "cosmiconfig-toml-loader",
         "webpack"
       ]
     }
