--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -40,7 +40,7 @@
     "@aws-sdk/credential-providers": "3.259.0",
     "@aws-sdk/s3-request-presigner": "3.259.0",
     "@babel/core": "7.20.12",
-    "@dargmuesli/nuxt-cookie-control": "3.0.0",
+    "@dargmuesli/nuxt-cookie-control": "5.0.0-beta.2",
     "@funken-studio/sitemap-nuxt-3": "4.0.4",
     "@graphql-codegen/cli": "2.16.4",
     "@graphql-codegen/typescript": "2.8.7",
