--- a/.dockerignore
+++ b/.dockerignore
@@ -11,6 +11,9 @@ nuxt/.output
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 
+# Docker
+Dockerfile
+
 # Git
 nuxt/**/!.gitkeep
 
