--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -99,6 +99,7 @@
     "node-fetch": "3.3.0",
     "nuxt": "3.2.3",
     "nuxt-schema-org": "2.1.2",
+    "ofetch": "1.0.1",
     "pinia": "2.0.32",
     "postcss": "8.4.21",
     "postcss-html": "1.5.0",
