--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -15,7 +15,7 @@
     "build": "nuxt build",
     "start": "node .output/server/index.mjs",
     "cypress:open": "cypress open",
-    "cypress:test": "cypress run --env type=actual",
+    "cypress:test": "./cypress/snapshots/test.sh",
     "test": "pnpm test:integration:dev",
     "test:integration:dev": "cross-env WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm dev' 'http://localhost:3000' 'pnpm cypress:test'",
     "test:integration:prod": "cross-env WAIT_ON_TIMEOUT=10000 NODE_ENV=production start-server-and-test 'pnpm start' 'http://localhost:3000' 'pnpm cypress:test'",
