--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -53,6 +53,7 @@
     "@nuxtjs/robots": "3.0.0",
     "@nuxtjs/sitemap": "2.4.0",
     "@pinia/nuxt": "0.4.9",
+    "@skjnldsv/vue-plyr": "7.3.1",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
     "@types/cookie": "0.5.1",
@@ -110,7 +111,6 @@
     "typescript": "5.0.4",
     "vue": "3.2.47",
     "vue-gtag": "2.0.1",
-    "vue-plyr": "7.0.0",
     "vue-tsc": "1.2.0"
   },
   "pnpm": {
