--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -11,17 +11,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "node .output/server/index.mjs",
-    "cypress:open": "cypress open",
-    "cypress:test": "./cypress/snapshots/test.sh",
-    "test": "pnpm test:integration:dev",
-    "test:integration:dev": "cross-env WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm dev' 'http://localhost:3000' 'pnpm cypress:test'",
-    "test:integration:prod": "cross-env WAIT_ON_TIMEOUT=10000 NODE_ENV=production start-server-and-test 'pnpm start' 'http://localhost:3000' 'pnpm cypress:test'",
-    "test:integration:docker:build": "docker build -t test-integration_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-integration_base ../",
-    "test:integration:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-integration_base",
-    "test:integration:docker:br": "pnpm test:integration:docker:build && pnpm test:integration:docker:run",
-    "test:integration:docker:dev": "pnpm test:integration:docker:br pnpm --dir nuxt test:integration:dev",
-    "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm --dir nuxt test:integration:prod",
+    "start": "PORT=3001 node .output/server/index.mjs",
     "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:ts": "nuxt typecheck",
@@ -29,14 +19,24 @@
     "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
     "lint:quiet": "pnpm lint:js --quiet && pnpm lint:style --quiet",
     "lint:staged": "pnpm lint-staged",
+    "prepare": "nuxt prepare",
+    "test:e2e": "playwright test",
+    "test:e2e:dev": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=100000 pnpm test:e2e",
+    "test:e2e:prod": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=10000 NODE_ENV=production pnpm test:e2e",
+    "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
+    "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
+    "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
+    "test:e2e:docker:dev": "pnpm test:e2e:docker:br pnpm --dir nuxt run test:e2e:dev",
+    "test:e2e:docker:dev:update": "pnpm test:e2e:docker:br pnpm --dir nuxt run test:e2e:dev --update-snapshots",
+    "test:e2e:docker:prod": "pnpm test:e2e:docker:br pnpm --dir nuxt run test:e2e:prod",
     "supportedBrowsers": "echo \"export default $(browserslist-useragent-regexp --allowHigherVersions);\" > supportedBrowsers.js",
-    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
-    "prepare": "nuxt prepare"
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "3.357.0",
     "@aws-sdk/credential-providers": "3.357.0",
     "@aws-sdk/s3-request-presigner": "3.357.0",
+    "@axe-core/playwright": "4.7.3",
     "@babel/core": "7.22.5",
     "@dargmuesli/nuxt-cookie-control": "5.10.2",
     "@funken-studio/sitemap-nuxt-3": "4.0.4",
@@ -52,6 +52,7 @@
     "@nuxtjs/i18n": "8.0.0-beta.12",
     "@nuxtjs/robots": "3.0.0",
     "@pinia/nuxt": "0.4.11",
+    "@playwright/test": "1.34.2",
     "@skjnldsv/vue-plyr": "7.3.1",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
@@ -71,8 +72,6 @@
     "consola": "3.1.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
-    "cypress": "12.14.0",
-    "cypress-visual-regression": "3.0.0",
     "dayjs": "2.0.0-alpha.4",
     "defu": "6.1.2",
     "eslint": "8.43.0",
@@ -98,7 +97,6 @@
     "pretty-bytes": "6.1.0",
     "rollup": "3.25.1",
     "slugify": "1.6.6",
-    "start-server-and-test": "2.0.0",
     "stylelint": "15.8.0",
     "stylelint-config-recommended-vue": "1.4.0",
     "stylelint-config-standard": "33.0.0",
