chore(deps): add playwright-core as peer dependency

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -108,5 +108,8 @@
     "vue": "3.3.4",
     "vue-gtag": "2.0.1",
     "vue-tsc": "1.8.4"
+  },
+  "peerDependencies": {
+    "playwright-core": "1.36.0"
   }
 }
