chore(deps): pin eslint-plugin-vue to v9.15.1

--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "pnpm": {
+    "overrides": {
+      "eslint-plugin-vue": "9.15.1"
+    }
   }
 }
