chore(deps): upgrade

--- a/src/package.json
+++ b/src/package.json
@@ -37,7 +37,7 @@
     "@aws-sdk/credential-providers": "3.397.0",
     "@aws-sdk/s3-request-presigner": "3.397.0",
     "@axe-core/playwright": "4.7.3",
-    "@dargmuesli/nuxt-vio": "3.0.0-beta.21",
+    "@dargmuesli/nuxt-vio": "3.0.0",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
@@ -48,7 +48,7 @@
     "@skjnldsv/vue-plyr": "7.3.1",
     "@types/lodash-es": "4.17.8",
     "@types/marked": "5.0.1",
-    "@types/node": "20.5.1",
+    "@types/node": "20.5.3",
     "consola": "3.2.3",
     "cross-env": "7.0.3",
     "defu": "6.1.2",
