feat(urql): use offline exchange

--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "pnpm": {
+    "overrides": {
+      "clipboardy": "4.0.0"
+    }
   }
 }
