--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "build:static": "nuxt generate",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "lint-staged",
@@ -45,8 +46,11 @@
     "@aws-sdk/s3-request-presigner": "3.441.0",
     "@axe-core/playwright": "4.8.1",
     "@dargmuesli/nuxt-cookie-control": "7.1.1",
-    "@dargmuesli/nuxt-vio": "9.0.0-beta.4",
+    "@dargmuesli/nuxt-vio": "9.0.0-beta.5",
     "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-codegen/typescript-urql-graphcache": "3.0.0",
+    "@graphql-codegen/urql-introspection": "3.0.0",
     "@graphql-typed-document-node/core": "3.2.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
@@ -55,6 +59,7 @@
     "@pinia/nuxt": "0.5.1",
     "@playwright/test": "1.39.0",
     "@skjnldsv/vue-plyr": "7.4.0",
+    "@types/html-to-text": "9.0.3",
     "@types/lodash-es": "4.17.10",
     "@urql/core": "4.1.4",
     "@urql/devtools": "2.0.3",
@@ -72,11 +77,13 @@
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-yml": "1.10.0",
     "graphql": "16.8.1",
+    "h3": "1.8.2",
     "html-to-text": "9.0.5",
     "jiti": "1.21.0",
     "lint-staged": "15.0.2",
     "lodash-es": "4.17.21",
     "marked": "9.1.5",
+    "nitropack": "2.7.2",
     "nuxt": "3.8.1",
     "playwright-core": "1.39.0",
     "plyr": "3.7.8",
@@ -87,6 +94,7 @@
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
+    "tailwindcss": "3.3.5",
     "unhead": "1.8.3",
     "vue": "3.3.8",
     "vue-router": "4.2.5",
