chore(deps): pin @nuxtjs/tailwindcss to v6.11.0

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "scripts": {
     "prepare": "husky"
   },
-  "resolutions": {
-    "@nuxtjs/tailwindcss": "6.11.2"
+  "pnpm": {
+    "overrides": {
+      "@nuxtjs/tailwindcss": "6.11.0"
+    }
   }
 }
