chore(package): add start script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "pnpm --dir src run dev",
     "generate": "pnpm --dir src run generate",
     "prepare": "husky",
+    "start": "pnpm --dir src run start",
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
     "start:static": "pnpm --dir src run start:static",
