--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
     "prepare": "nuxt prepare",
     "preview": "nuxt preview",
+    "start": "pnpm run start:node",
     "start:dev": "nuxt dev",
     "start:node": "node .output/server/index.mjs",
     "start:static": "serve .output/public",
