chore(package): add root lint convenience script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:static": "pnpm --dir src run build:static",
     "dev": "pnpm --dir src run dev",
     "generate": "pnpm --dir src run generate",
+    "lint": "pnpm --dir src run lint",
     "prepare": "husky",
     "start": "pnpm --dir src run start",
     "start:dev": "pnpm --dir src run start:dev",
