chore(package): sort

--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
     "start:static": "pnpm --dir src run start:static",
+    "test:e2e": "pnpm --dir src run test:e2e",
     "test:e2e:docker:br": "pnpm --dir src run test:e2e:docker:br",
     "test:e2e:docker:build": "pnpm --dir src run test:e2e:docker:build",
     "test:e2e:docker:run": "pnpm --dir src run test:e2e:docker:run",
-    "test:e2e:docker:server:dev:update": "pnpm --dir src run test:e2e:docker:server:dev:update",
     "test:e2e:docker:server:dev": "pnpm --dir src run test:e2e:docker:server:dev",
-    "test:e2e:docker:server:node:update": "pnpm --dir src run test:e2e:docker:server:node:update",
+    "test:e2e:docker:server:dev:update": "pnpm --dir src run test:e2e:docker:server:dev:update",
     "test:e2e:docker:server:node": "pnpm --dir src run test:e2e:docker:server:node",
-    "test:e2e:docker:server:static:update": "pnpm --dir src run test:e2e:docker:server:static:update",
+    "test:e2e:docker:server:node:update": "pnpm --dir src run test:e2e:docker:server:node:update",
     "test:e2e:docker:server:static": "pnpm --dir src run test:e2e:docker:server:static",
+    "test:e2e:docker:server:static:update": "pnpm --dir src run test:e2e:docker:server:static:update",
     "test:e2e:server:dev": "pnpm --dir src run test:e2e:server:dev",
     "test:e2e:server:node": "pnpm --dir src run test:e2e:server:node",
-    "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static",
-    "test:e2e": "pnpm --dir src run test:e2e"
+    "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static"
   }
 }
