chore(ide): drop unwanted recommendations for vscode

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,9 +7,6 @@
     "graphql.vscode-graphql",
     "stylelint.vscode-stylelint",
     "timonwong.shellcheck",
-    "vue.volar",
-  ],
-  "unwantedRecommendations": [
-    "vscode.typescript-language-features"
+    "vue.volar"
   ]
 }
